# windows-rs

crates/libs/bindgen/src/: lib.rs
crates/libs/bindgen/src/rust/: mod.rs  writer.rs
crates/libs/bindgen/src/rust/extensions/impl/Foundation/Collections/: Iterable.rs  MapView.rs  VectorView.rs
crates/libs/bindgen/src/winmd/: from_reader.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: lib.rs
crates/libs/implement/src/: lib.rs
crates/libs/interface/src/: lib.rs
crates/libs/metadata/src/: reader.rs
crates/libs/windows/: Cargo.toml
crates/libs/windows/src/: lib.rs
crates/libs/windows/src/Windows/Foundation/Collections/: impl.rs
crates/tests/core_implement/: Cargo.toml
crates/tests/core_implement/tests/: com.rs
crates/tests/interface/: Cargo.toml
crates/tests/interface/tests/: com.rs  com_from_existing.rs
crates/tools/features/: Cargo.toml  readme.md
crates/tools/features/src/: main.rs
