[package]
name = "windows-core"
version = "0.52.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.62"
license = "MIT OR Apache-2.0"
description = "Rust for Windows"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"
categories = ["os::windows-apis"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
windows-targets = { path = "../targets", version = "0.52.0" }
windows-implement = { path = "../implement",  version = "0.52.0", optional = true }
windows-interface = { path = "../interface",  version = "0.52.0", optional = true }

[features]
default = []
implement = ["windows-implement", "windows-interface"]
