[package]
name = "windows-features"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "Windows cargo feature search tool"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"

[dependencies.windows-bindgen]
path = "../../libs/bindgen"
version = "0.52.0"
